--- a/8. What We See/whatweseestyle.css
+++ b/8. What We See/whatweseestyle.css
@@ -20,7 +20,7 @@
 }
 
 .testimonials h3 {
-    margin-top: 20px;
+    margin-top: 40px;
     font-size: 1.8em;
     font-weight: bold;
     color: #8d7762;
@@ -35,7 +35,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
-    margin-top: 40px;
+    margin-top: 10px;
     max-width: 1200px;
 }
 
@@ -43,26 +43,19 @@
     background-color: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 10px;
     width: calc(25% - 20px);
     min-width: 250px;
     text-align: center;
 }
 
-.card img {
-    max-width: 30%;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 15px;
-}
-
 .card h3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
-    color: #333;
+    color: #998c7f;
 }
 
 .card p {
     font-size: 1rem;
-    color: #666;
+    color: #8d7762;
 }
