--- a/8. What We See/whatweseestyle.css
+++ b/8. What We See/whatweseestyle.css
@@ -14,14 +14,14 @@
 }
 
 .testimonials p {
-    font-size: 1.4em;
+    font-size: 1.5em;
     line-height: 1.6;
     color:#998c7f;
 }
 
 .testimonials h3 {
     margin-top: 40px;
-    font-size: 1.8em;
+    font-size: 2em;
     font-weight: bold;
     color: #8d7762;
 }
@@ -33,29 +33,30 @@
 .value-cards {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     gap: 30px;
-    margin-top: 10px;
-    max-width: 1200px;
+    margin-top: 20px;
 }
 
 .card {
     background-color: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+    padding: 35px 10px;
     width: calc(25% - 20px);
     min-width: 250px;
     text-align: center;
 }
 
 .card h3 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 10px;
     color: #998c7f;
+    margin-top: 0px;
 }
 
 .card p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #8d7762;
 }
